# MonteCarloPathTracer

./: .gitignore  CMakeLists.txt  README.md
doc/: 硬阴影技术介绍.md  蒙特卡洛光线追踪.md
include/: Camera.h  Kdtree.h  Material.h  Objects.h  Ray.h  Renderer.h  Scene.h  Timer.h  Type.h
lib/tiny_obj_loader/: tiny_obj_loader.h
src/: Camera.cpp  Kdtree.cpp  Objects.cpp  Renderer.cpp  Scene.cpp  Timer.cpp  main.cpp
